--- a/Part 1 - CNNs/04 - Neural Nets with Pytorch.ipynb
+++ b/Part 1 - CNNs/04 - Neural Nets with Pytorch.ipynb
@@ -896,10 +896,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class ImageClassifier(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(ImageClassifier, self).__init__()\n",
+    "        # Entrada: 16x16 imagens (256 pixels)\n",
+    "        self.flatten = nn.Flatten()\n",
+    "        self.fc1 = nn.Linear(16 * 16, 128)  # Primeira camada oculta com 128 neurônios\n",
+    "        self.fc2 = nn.Linear(128, 64)       # Segunda camada oculta com 64 neurônios\n",
+    "        self.output = nn.Linear(64, 5)      # Camada de saída com 5 classes\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.flatten(x)                # Achatar a imagem para 1D\n",
+    "        x = F.relu(self.fc1(x))            # Primeira camada com ReLU\n",
+    "        x = F.relu(self.fc2(x))            # Segunda camada com ReLU\n",
+    "        x = self.output(x)                 # Camada de saída (sem ativação, depende da tarefa: CrossEntropyLoss espera logits)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimensão da saída: torch.Size([8, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Criar uma instância do modelo\n",
+    "model = ImageClassifier()\n",
+    "\n",
+    "# Testar o modelo com um tensor aleatório (batch de 8 imagens 16x16)\n",
+    "input_tensor = torch.rand(8, 1, 16, 16)  # Batch de 8 imagens em escala de cinza\n",
+    "output = model(input_tensor)\n",
+    "\n",
+    "# Exibir as dimensões da saída\n",
+    "print(\"Dimensão da saída:\", output.shape)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -911,11 +956,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Considerando que imagens em escala de cinza:\n",
+    "- Na primeira camada, `fc1`, teremos: \n",
+    "- Entrada 16x16 = 256 parâmetros\n",
+    "- Saída de 128 neurônios;\n",
+    "- Parâmetros: 256 + 128 + 128 = 32.896\n",
+    "---\n",
+    "- Na primeira camada, `fc2`, teremos: \n",
+    "- Entrada: 128 neurônios;\n",
+    "- Saída: 64 neurônios;\n",
+    "- Parâmetros: 128 × 64 + 64 = 8.256;\n",
+    "---\n",
+    "- Na camada de saída, `output`, teremos: \n",
+    "- Entrada: 64 neurônios;\n",
+    "- Saída: 5 neurônios;\n",
+    "- Parâmetros: 64 × 5 + 5 = 8.256;\n",
+    "\n",
+    "Total de Parâmetros: 32.896 + 8.256 + 325 = 41.477."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Considerando que imagens em escala RGB:\n",
+    "- Na primeira camada, `fc1`, teremos: \n",
+    "- Entrada 16 x 16 x 3 = 768 parâmetros\n",
+    "- Saída de 128 neurônios;\n",
+    "- Parâmetros: 768 + 128 + 128 = 98.432\n",
+    "---\n",
+    "- Na primeira camada, `fc2`, teremos: \n",
+    "- Entrada: 128 neurônios;\n",
+    "- Saída: 64 neurônios;\n",
+    "- Parâmetros: 128 × 64 + 64 = 8.256;\n",
+    "---\n",
+    "- Na camada de saída, `output`, teremos: \n",
+    "- Entrada: 64 neurônios;\n",
+    "- Saída: 5 neurônios;\n",
+    "- Parâmetros: 64 × 5 + 5 = 8.256;\n",
+    "\n",
+    "Total de Parâmetros: 32.896 + 8.256 + 325 = 107.013."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Diferença no Número de Parâmetros\n",
+    "\n",
+    "- Modelo com imagens em escala de cinza: 41,477 parâmetros.\n",
+    "- Modelo com imagens RGB: 107,013 parâmetros."
+   ]
   }
  ],
  "metadata": {
@@ -923,7 +1017,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -937,7 +1031,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
