--- a/Part 1 - CNNs/05 - Basic CNNs.ipynb
+++ b/Part 1 - CNNs/05 - Basic CNNs.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,23 +47,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2024-07-27 01:29:03--  https://pjreddie.com/media/files/mnist_train.csv\n",
-      "Resolving pjreddie.com (pjreddie.com)... 162.0.215.52\n",
-      "Connecting to pjreddie.com (pjreddie.com)|162.0.215.52|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 109575994 (104M) [text/csv]\n",
-      "Saving to: ‘data/mnist_train.csv’\n",
+      "--2025-01-09 22:20:26--  https://pjreddie.com/media/files/mnist_train.csv\n",
+      "Resolvendo pjreddie.com (pjreddie.com)... 162.0.215.52\n",
+      "Conectando-se a pjreddie.com (pjreddie.com)|162.0.215.52|:443... conectado.\n",
+      "A requisição HTTP foi enviada, aguardando resposta... 200 OK\n",
+      "Tamanho: 109575994 (104M) [text/csv]\n",
+      "Salvando em: ‘data/mnist_train.csv’\n",
       "\n",
-      "mnist_train.csv     100%[===================>] 104,50M  3,26MB/s    in 33s     \n",
+      "mnist_train.csv     100%[===================>] 104,50M  19,5MB/s    em 6,4s    \n",
       "\n",
-      "2024-07-27 01:29:38 (3,17 MB/s) - ‘data/mnist_train.csv’ saved [109575994/109575994]\n",
+      "2025-01-09 22:20:33 (16,2 MB/s) - ‘data/mnist_train.csv’ salvo [109575994/109575994]\n",
       "\n"
      ]
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -690,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
