--- a/Part 2 - LLMs/02 - Classifier with LSTM.ipynb
+++ b/Part 2 - LLMs/02 - Classifier with LSTM.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,9 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape da saída:  torch.Size([8, 7, 10])\n",
+      "Shape do estado oculto hn:  torch.Size([2, 8, 10])\n",
+      "Shape do estado da célula cn:  torch.Size([2, 8, 10])\n"
+     ]
+    }
+   ],
    "source": [
     "# Analisando as saídas\n",
     "print(\"Shape da saída: \", output.shape)\n",
@@ -135,9 +145,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Novo comprimento da sequência: 5\n",
+      "Shape da saída:  torch.Size([8, 5, 10])\n",
+      "Shape do estado oculto hn:  torch.Size([2, 8, 10])\n",
+      "Shape do estado da célula cn:  torch.Size([2, 8, 10])\n",
+      "\n",
+      "Novo tamanho do batch: 32\n",
+      "Shape da saída:  torch.Size([32, 5, 10])\n",
+      "Shape do estado oculto hn:  torch.Size([2, 32, 10])\n",
+      "Shape do estado da célula cn:  torch.Size([2, 32, 10])\n"
+     ]
+    }
+   ],
    "source": [
     "# Modificando o comprimento da sequência\n",
     "seq_len = 5\n",
@@ -171,9 +197,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape da saída:  torch.Size([32, 5, 10])\n",
+      "Shape do estado oculto hn:  torch.Size([2, 32, 10])\n",
+      "Shape do estado da célula cn:  torch.Size([2, 32, 10])\n"
+     ]
+    }
+   ],
    "source": [
     "# Estado inicial personalizado\n",
     "h0 = torch.randn(num_layers, batch_size, hidden_size)\n",
@@ -202,9 +238,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2025-01-12 16:53:20--  https://download.pytorch.org/tutorial/data.zip\n",
+      "Resolvendo download.pytorch.org (download.pytorch.org)... 52.84.83.15, 52.84.83.101, 52.84.83.48, ...\n",
+      "Conectando-se a download.pytorch.org (download.pytorch.org)|52.84.83.15|:443... conectado.\n",
+      "A requisição HTTP foi enviada, aguardando resposta... 200 OK\n",
+      "Tamanho: 2882130 (2,7M) [application/zip]\n",
+      "Salvando em: ‘data/data.zip’\n",
+      "\n",
+      "data.zip            100%[===================>]   2,75M  5,70MB/s    em 0,5s    \n",
+      "\n",
+      "2025-01-12 16:53:21 (5,70 MB/s) - ‘data/data.zip’ salvo [2882130/2882130]\n",
+      "\n",
+      "Archive:  data/data.zip\n",
+      "  inflating: ./data/eng-fra.txt      \n",
+      "   creating: ./data/names/\n",
+      "  inflating: ./data/names/Arabic.txt  \n",
+      "  inflating: ./data/names/Chinese.txt  \n",
+      "  inflating: ./data/names/Czech.txt  \n",
+      "  inflating: ./data/names/Dutch.txt  \n",
+      "  inflating: ./data/names/English.txt  \n",
+      "  inflating: ./data/names/French.txt  \n",
+      "  inflating: ./data/names/German.txt  \n",
+      "  inflating: ./data/names/Greek.txt  \n",
+      "  inflating: ./data/names/Irish.txt  \n",
+      "  inflating: ./data/names/Italian.txt  \n",
+      "  inflating: ./data/names/Japanese.txt  \n",
+      "  inflating: ./data/names/Korean.txt  \n",
+      "  inflating: ./data/names/Polish.txt  \n",
+      "  inflating: ./data/names/Portuguese.txt  \n",
+      "  inflating: ./data/names/Russian.txt  \n",
+      "  inflating: ./data/names/Scottish.txt  \n",
+      "  inflating: ./data/names/Spanish.txt  \n",
+      "  inflating: ./data/names/Vietnamese.txt  \n"
+     ]
+    }
+   ],
    "source": [
     "# Download do conjunto de dados em data/\n",
     "!wget -P data/ https://download.pytorch.org/tutorial/data.zip\n",
@@ -215,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,9 +303,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset size: 20074\n",
+      "torch.Size([3, 1, 58]) tensor([0]) Ang Chinese\n"
+     ]
+    }
+   ],
    "source": [
     "class NameDataset(Dataset):\n",
     "    def __init__(self, data_path):\n",
@@ -301,9 +385,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamanho do dataset de treinamento: 16059\n",
+      "Tamanho do dataset de teste: 4015\n"
+     ]
+    }
+   ],
    "source": [
     "# Caminho para os arquivos de dados\n",
     "data_path = 'data/names/*.txt'\n",
@@ -322,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,9 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([8, 10, 58]) torch.Size([8])\n"
+     ]
+    }
+   ],
    "source": [
     "# Exemplo de uso do DataLoader\n",
     "names, categories = next(iter(test_loader))\n",
@@ -359,9 +460,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Beilis----', 'Russian')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "idx = 2\n",
     "dataset.tensor_to_name(names[idx]), dataset.idx2cat[categories[idx].item()]"
@@ -385,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,9 +554,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/2008 [00:00<?, ?it/s]/home/daniel/Documentos/dados/projetos/16 - Topicos Contemporaneos/topicos_contemporaneos/venv/lib/python3.12/site-packages/torch/autograd/graph.py:825: UserWarning: CUDA initialization: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero. (Triggered internally at ../c10/cuda/CUDAFunctions.cpp:108.)\n",
+      "  return Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n",
+      "100%|██████████| 2008/2008 [00:07<00:00, 269.90it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss: 1.5089236497879028\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:07<00:00, 258.25it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Loss: 0.7627083659172058\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:06<00:00, 305.57it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2, Loss: 0.31760427355766296\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:04<00:00, 438.86it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3, Loss: 0.7065393328666687\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:05<00:00, 372.34it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4, Loss: 0.08366677910089493\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:07<00:00, 277.91it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5, Loss: 0.3831721246242523\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:07<00:00, 258.99it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6, Loss: 0.1121138334274292\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:07<00:00, 257.63it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7, Loss: 0.009753271006047726\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:07<00:00, 258.49it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8, Loss: 0.748405933380127\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:07<00:00, 259.41it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9, Loss: 0.11940204352140427\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Treinamento\n",
     "num_epochs = 10\n",
@@ -473,9 +735,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia no conjunto de teste: 81.05%\n"
+     ]
+    }
+   ],
    "source": [
     "# Avaliação do modelo\n",
     "model.eval()\n",
@@ -502,9 +772,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nome: Niall | Nacionalidade Real: Irish | Predição: English\n",
+      "\n",
+      "Nome: Quirke | Nacionalidade Real: Irish | Predição: Dutch\n",
+      "\n",
+      "Nome: Fadyaev | Nacionalidade Real: Russian | Predição: Russian\n",
+      "\n",
+      "Nome: Gudymo | Nacionalidade Real: Russian | Predição: English\n",
+      "\n",
+      "Nome: Protopsaltis | Nacionalidade Real: Greek | Predição: Greek\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for _ in range(5):\n",
     "    i = np.random.randint(len(test_dataset))\n",
@@ -535,6 +822,192 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:10<00:00, 194.42it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss: 1.5450376272201538\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:10<00:00, 186.28it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Loss: 0.9728170037269592\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:08<00:00, 224.44it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2, Loss: 0.23864078521728516\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:11<00:00, 181.56it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3, Loss: 1.4029536247253418\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:10<00:00, 183.06it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4, Loss: 2.392688512802124\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:11<00:00, 181.98it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5, Loss: 0.13831795752048492\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:10<00:00, 185.07it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6, Loss: 0.041103240102529526\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:10<00:00, 183.12it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7, Loss: 1.1725828647613525\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:08<00:00, 229.78it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8, Loss: 0.023965412750840187\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2008/2008 [00:09<00:00, 215.73it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9, Loss: 1.0082951784133911\n",
+      "Acurácia no conjunto de teste: 81.74%\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = LSTMClassifier(input_size, hidden_size, output_size, num_layers=2)\n",
+    "criterion = nn.CrossEntropyLoss(ignore_index=0)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "num_epochs = 10\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    for names, categories in tqdm(train_loader):\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(names)\n",
+    "        loss = criterion(outputs, categories.squeeze())\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    if epoch % 1 == 0:\n",
+    "        print(f'Epoch {epoch}, Loss: {loss.item()}')\n",
+    "\n",
+    "model.eval()\n",
+    "correct = 0\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for names, categories in test_loader:\n",
+    "        outputs = model(names)\n",
+    "        predicted = torch.argmax(outputs, dim=1)\n",
+    "        correct += (predicted == categories.squeeze()).sum().item()\n",
+    "\n",
+    "accuracy = correct / len(test_dataset)\n",
+    "print(f'Acurácia no conjunto de teste: {accuracy * 100:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nota-se o aumento da acurácia"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -544,15 +1017,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nome: Daniel | Predição: English\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Daniel\"\n",
+    "name_tensor = dataset.name_to_tensor(name)\n",
+    "with torch.no_grad():\n",
+    "  name_tensor = name_tensor.squeeze().unsqueeze(0)\n",
+    "  name = dataset.tensor_to_name(name_tensor[0])\n",
+    "  output = model(name_tensor)\n",
+    "  predicted = output.argmax(-1).item()\n",
+    "  print(f\"Nome: {name} | Predição: {dataset.idx2cat[predicted]}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -566,7 +1056,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
