--- a/Part 2 - LLMs/05 - HuggingFace Intro.ipynb
+++ b/Part 2 - LLMs/05 - HuggingFace Intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokens GPT-2: ['Art', 'ificial', 'Ġintelligence', 'Ġis', 'Ġthe', 'Ġfuture', '.']\n",
+      "Tokens BERT: ['artificial', 'intelligence', 'is', 'the', 'future', '.']\n"
+     ]
+    }
+   ],
    "source": [
     "# Exemplo de tokenização\n",
     "input_text = \"Artificial intelligence is the future.\"\n",
@@ -59,9 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IDs GPT-2: [8001, 9542, 4430, 318, 262, 2003, 13]\n",
+      "IDs BERT: [7976, 4454, 2003, 1996, 2925, 1012]\n"
+     ]
+    }
+   ],
    "source": [
     "gpt2_ids = gpt2_tokenizer.convert_tokens_to_ids(gpt2_tokens)\n",
     "bert_ids = bert_tokenizer.convert_tokens_to_ids(bert_tokens)\n",
@@ -72,9 +90,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input GPT-2: {'input_ids': tensor([[8001, 9542, 4430,  318,  262, 2003,   13]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1]])}\n",
+      "Input BERT: {'input_ids': tensor([[ 101, 7976, 4454, 2003, 1996, 2925, 1012,  102]]), 'token_type_ids': tensor([[0, 0, 0, 0, 0, 0, 0, 0]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1]])}\n"
+     ]
+    }
+   ],
    "source": [
     "gpt2_input = gpt2_tokenizer(input_text, return_tensors=\"pt\")\n",
     "bert_input = bert_tokenizer(input_text, return_tensors=\"pt\")\n",
@@ -105,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,9 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input IDs: {'input_ids': tensor([[ 818,  257,  995,  810, 9552]]), 'attention_mask': tensor([[1, 1, 1, 1, 1]])}\n"
+     ]
+    }
+   ],
    "source": [
     "# Texto de entrada\n",
     "input_text = \"In a world where AI\"\n",
@@ -146,9 +181,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 50])\n",
+      "Output: tensor([[  818,   257,   995,   810,  9552,   318,   257,  1263,  1917,    11,\n",
+      "           340,   338,  1593,   284,  1833,   703,   340,  2499,    13,   198,\n",
+      "           198,   464,  1917,   318,   326,  9552,   318,   407,   257,  1917,\n",
+      "           379,   477,    13,   632,   338,   257,  1917,   326,   460,   307,\n",
+      "         16019,   416,   257,  1256,   286,  1180, 10581,    13,   198,   198]])\n"
+     ]
+    }
+   ],
    "source": [
     "# Gerando o texto\n",
     "output = gpt2_model.generate(**input_ids, max_length=50)\n",
@@ -159,9 +207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In a world where AI is a big problem, it's important to understand how it works.\n",
+      "\n",
+      "The problem is that AI is not a problem at all. It's a problem that can be solved by a lot of different approaches.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Decodificando o texto gerado\n",
     "generated_text = gpt2_tokenizer.decode(output[0])\n",
@@ -170,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,9 +244,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brazil is a country that has been a beacon of hope for the poor and the working class.\n",
+      "\n",
+      "The country's economic growth has been a boon for the country's poor, and the country's economy has been a boon for the country's middle\n"
+     ]
+    }
+   ],
    "source": [
     "prediction = complete_text(\"Brazil is\")\n",
     "print(prediction)"
@@ -194,9 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "language\n"
+     ]
+    }
+   ],
    "source": [
     "def generate_next_tokens(input_text, n_tokens=1, model=gpt2_model, tokenizer=gpt2_tokenizer):\n",
     "    input_ids = tokenizer(input_text, return_tensors=\"pt\").input_ids\n",
@@ -224,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,9 +326,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 8, 768])\n",
+      "torch.Size([1, 768])\n"
+     ]
+    }
+   ],
    "source": [
     "# Texto de entrada\n",
     "text = \"Artificial intelligence is the future.\"\n",
@@ -269,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,9 +404,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Similaridade com doc1: 0.8325\n",
+      "Similaridade com doc2: 0.5219\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculando similaridade por cosseno\n",
     "cos = torch.nn.CosineSimilarity(dim=1)\n",
@@ -347,10 +443,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O sujeito é John.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import GPT2LMHeadModel, GPT2Tokenizer\n",
+    "import torch\n",
+    "\n",
+    "gpt2_tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
+    "gpt2_model = GPT2LMHeadModel.from_pretrained(\"gpt2\", pad_token_id=gpt2_tokenizer.eos_token_id)\n",
+    "\n",
+    "\n",
+    "def guess_subject(input_text, model=gpt2_model, tokenizer=gpt2_tokenizer):\n",
+    "    prompt = f\"Identify the subject: {input_text}?\"\n",
+    "    input_ids = tokenizer(prompt, return_tensors=\"pt\").input_ids\n",
+    "    output = model.generate(input_ids, max_length=14, num_return_sequences=1, do_sample=False)\n",
+    "    generated_text = tokenizer.decode(output[0], skip_special_tokens=False)\n",
+    "    subject = generated_text.replace(prompt, \"\").strip()\n",
+    "    return subject\n",
+    "\n",
+    "sentence = \"John went to the store\"\n",
+    "subject = guess_subject(sentence)\n",
+    "print(f\"O sujeito é {subject}.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -362,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,15 +549,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def busca(query, data):\n",
+    "    query_emb = get_embedding(query)\n",
+    "    data_embeddings = [get_embedding(d) for d in data]\n",
+    "\n",
+    "    cos = torch.nn.CosineSimilarity(dim=1)\n",
+    "    similarities = [cos(data_embbeding, query_emb) for data_embbeding in data_embeddings]\n",
+    "\n",
+    "    top_results = sorted(range(len(similarities)), key=lambda i: similarities[i], reverse=True)[:5]\n",
+    "    return [descriptions[i] for i in top_results]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A story of redemption and the power of forgiveness.\n",
+      "A darkly comic tale of life in the absurd.\n",
+      "A story of forbidden love in a society bound by tradition.\n",
+      "A memoir of a life lived on the edge of society.\n",
+      "A powerful drama about family, secrets, and redemption.\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"a fantasy\"\n",
+    "\n",
+    "books = busca(query, descriptions)\n",
+    "\n",
+    "for i, book in enumerate(books):\n",
+    "    print(f'{book}')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -448,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
