--- a/Part 2 - LLMs/09 - RAG.ipynb
+++ b/Part 2 - LLMs/09 - RAG.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import getpass\n",
-    "# import os\n",
+    "import getpass\n",
+    "import os\n",
     "\n",
-    "# os.environ[\"OPENAI_API_KEY\"] = getpass.getpass()"
+    "os.environ[\"OPENAI_API_KEY\"] = getpass.getpass()"
    ]
   },
   {
@@ -28,9 +28,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4301"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# https://python.langchain.com/v0.2/docs/how_to/#document-loaders\n",
     "# https://python.langchain.com/v0.2/docs/integrations/document_loaders/\n",
@@ -62,9 +80,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# https://python.langchain.com/v0.2/docs/how_to/#text-splitters\n",
     "\n",
@@ -80,9 +109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requisitos e Qualificações:\n",
+      "Doutorado em áreas correlatas;Compreenda e desenvolva modelos de machine learning e deep learning para resolver desafios complexos de cibersegurança;Conhecimento em frameworks de machine learning como TensorFlow, PyTorch ou scikit-learn para desenvolver modelos preditivos e de detecção de anomalias aplicados à cibersegurança;Entenda a arquitetura distribuída dos sistemas e garanta a integração eficiente de soluções de IA com aplicações em cloud;Habilidade em manipulação e visualização de dados com Pandas, NumPy, Matplotlib e Seaborn para explorar grandes volumes de dados;Experiência com AWS, Google Cloud ou Azure para projetar e implementar infraestruturas escaláveis e resilientes;Familiaridade com Kubernetes e Docker para garantir escalabilidade e resiliência de sistemas distribuídos;Experiência com controle de versão (Git) e repositórios remotos como GitLab;Inglês avançado para leitura, escrita e comunicação, facilitando a colaboração com equipes globais.\n"
+     ]
+    }
+   ],
    "source": [
     "print(all_splits[3].page_content)"
    ]
@@ -96,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,9 +148,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "retriever = vectorstore.as_retriever(search_type=\"similarity\", search_kwargs={\"k\": 6})\n",
     "\n",
@@ -123,9 +172,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requisitos e Qualificações:\n",
+      "Doutorado em áreas correlatas;Compreenda e desenvolva modelos de machine learning e deep learning para resolver desafios complexos de cibersegurança;Conhecimento em frameworks de machine learning como TensorFlow, PyTorch ou scikit-learn para desenvolver modelos preditivos e de detecção de anomalias aplicados à cibersegurança;Entenda a arquitetura distribuída dos sistemas e garanta a integração eficiente de soluções de IA com aplicações em cloud;Habilidade em manipulação e visualização de dados com Pandas, NumPy, Matplotlib e Seaborn para explorar grandes volumes de dados;Experiência com AWS, Google Cloud ou Azure para projetar e implementar infraestruturas escaláveis e resilientes;Familiaridade com Kubernetes e Docker para garantir escalabilidade e resiliência de sistemas distribuídos;Experiência com controle de versão (Git) e repositórios remotos como GitLab;Inglês avançado para leitura, escrita e comunicação, facilitando a colaboração com equipes globais.\n"
+     ]
+    }
+   ],
    "source": [
     "print(retrieved_docs[0].page_content)"
    ]
@@ -139,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,9 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[HumanMessage(content='Você é um assistente para tarefas de perguntas e respostas. Use os seguintes trechos de contexto recuperados para responder à pergunta. Se você não souber a resposta, apenas diga que não sabe. Use no máximo duas frases e mantenha a resposta concisa e fale apenas o necessário.\\n\\nPergunta: alguma pergunta\\n\\nContexto: algum contexto\\n\\nResposta:\\n', additional_kwargs={}, response_metadata={})]\n"
+     ]
+    }
+   ],
    "source": [
     "example_messages = prompt_template.invoke({\n",
     "    \"context\": \"algum contexto\",\n",
@@ -180,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,9 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sim, o CESAR oferece plano de saúde como um dos benefícios para os colaboradores. Além disso, há também plano odontológico e outros auxílios."
+     ]
+    }
+   ],
    "source": [
     "for chunk in rag_chain.stream(\"Tem plano de saúde como benefício?\"):\n",
     "    print(chunk, end=\"\", flush=True)"
@@ -233,11 +307,81 @@
     "### Exercício 1\n",
     "Faça um RAG com um pequeno arquivo de texto, contendo informações que, certamente, a LLM não conheça. Você deverá construir o arquivo e enviar para o ambiente de execução. Escolha a forma de chunking apropriada para o seu documento."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O Strateegia possui diversas funcionalidades que visam otimizar a tomada de decisão e a inovação em comunidades colaborativas. Aqui estão algumas das principais:\n",
+      "\n",
+      "1. **Debates com Agentes Inteligentes**: A plataforma permite que pessoas debatam com agentes inteligentes (IA), facilitando discussões enriquecedoras e trazendo novas perspectivas.\n",
+      "\n",
+      "2. **Assistentes Inteligentes**: Utilize assistentes executivos, mentores e especialistas de diferentes áreas para obter insights valiosos e aplicar esses conhecimentos em seus projetos.\n",
+      "\n",
+      "3. **Modo Anônimo Temporário**: Ative essa funcionalidade para que todos os participantes se sintam à vontade para expressar opiniões e discordar, promovendo uma cultura de inovação.\n",
+      "\n",
+      "4. **Análises Multidimensionais**: Os assistentes de IA analisam os debates, resumem conteúdos e destacam propostas-chave, ajudando a potencializar suas decisões com análises precisas.\n",
+      "\n",
+      "5. **Documentos Prontos para Publicação**: Transforme os resultados dos debates em documentos formatados, como artigos ou livros, com a ajuda dos assistentes de IA.\n",
+      "\n",
+      "6. **Construção de Consenso**: Identifique novos pontos de convergência e expresse suas ideias em propostas que refletem o consenso da sua comunidade.\n",
+      "\n",
+      "Se precisar de mais informações ou detalhes sobre alguma funcionalidade específica, é só perguntar! 😊"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "from langchain.schema import Document\n",
+    "\n",
+    "url = 'https://strateegia.digital'\n",
+    "response = requests.get(url)\n",
+    "html_content = response.text\n",
+    "\n",
+    "soup = BeautifulSoup(html_content, 'html.parser')\n",
+    "data = [p.get_text() for p in soup.find_all('p')]\n",
+    "\n",
+    "text_splitter = RecursiveCharacterTextSplitter(\n",
+    "    chunk_size=1000, chunk_overlap=200, add_start_index=True\n",
+    ")\n",
+    "all_splits = text_splitter.split_documents([Document(page_content=str(data))])\n",
+    "\n",
+    "\n",
+    "vectorstore = FAISS.from_documents(all_splits, OpenAIEmbeddings())\n",
+    "retriever = vectorstore.as_retriever(search_type=\"similarity\", search_kwargs={\"k\": 6})\n",
+    "\n",
+    "system_template = \"\"\"Você é um bot de ajuda sobre a plataforma strateegia. Responda as perguntas do usuário de maneira amigável e se mantendo apenas sobre a plataforma..\n",
+    "\n",
+    "Pergunta: {question}\n",
+    "\n",
+    "Contexto: {context}\n",
+    "\n",
+    "Resposta:\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt_template = ChatPromptTemplate.from_template(system_template)\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
+    "rag_chain = (\n",
+    "     {\"context\": retriever, \"question\": RunnablePassthrough()}\n",
+    "    | prompt_template\n",
+    "    | llm\n",
+    "    | StrOutputParser()\n",
+    ")\n",
+    "for chunk in rag_chain.stream(\"Quais são as principais funcionalidades do Strateegia?\"):\n",
+    "    print(chunk, end=\"\", flush=True)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -251,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
